tentative de récuperation de la grille2

--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,3 +1,5 @@
+<h1>Bienvenu au Labyrinthe !</h1>
+
 <div id="labyrintheContainer">
     <mat-grid-list cols="5" rowHeight="200px">
         <mat-grid-tile>1</mat-grid-tile>
